--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,6 @@ spring:
         jdbc:
           time_zone: UTC
           batch_size: 25
-        show_sql: true
       hibernate.cache.use_second_level_cache: true
   security:
     oauth2:
@@ -33,16 +32,8 @@ server:
 
 logging:
   level:
-    org:
-      hibernate:
-        type:
-          descriptor:
-            sql:
-              BasicBinder: trace
-      springframework:
-        orm:
-          jpa: info
-        transaction: info
+    sql: debug
+    org.hibernate.orm.jdbc.bind: trace
 
 application:
   google-client-id: 484087272547-6ig18d7gb6mt0cnbj14k94ua34r4ipci.apps.googleusercontent.com
